# zmNinjaNg

./: .github_changelog_generator  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRIVACY_POLICY.md  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: README.md  _RELEASE_NOTE_INSERT.md  auto-close-low-quality-issues.yml  build-all.yml  build-android.yml  build-linux-amd64.yml  build-linux-arm64.yml  build-macos.yml  build-windows.yml  claude-code-review.yml  claude.yml  create-release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: .gitignore  capacitor.config.ts  mock-notification-server.js  package-lock.json  package.json  playwright.config.android.ts  playwright.config.ts  vite.config.ts  wdio.config.device-screenshots.ts
app/android/: build.gradle
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: biometric.rs
app/tests/: README.md  platforms.config.defaults.ts  (+3 more)
docs/: conf.py  index.md
notes/: COMPARISON.md  EXPERIENCE.md  ORIGINAL_CLAUDE.md
scripts/: build-desktop.sh  make_release.sh  sync-version.js  test-all-platforms.sh  test-android.sh  test-ios.sh  test-tauri.sh  verify-platform-setup.ts
site/: index.html
(+305 files in other folders)
